Bug fix from 25bab27: Add conditions to fix unresolved resource dependencies.

--- a/templates/aws-vpc.template
+++ b/templates/aws-vpc.template
@@ -2654,6 +2654,7 @@
             }
         },
         "PrivateSubnet1ARouteTable": {
+            "Condition": "PrivateSubnetsCondition",
             "Value": {
                 "Ref": "PrivateSubnet1ARouteTable"
             },
@@ -2677,6 +2678,7 @@
             }
         },
         "PrivateSubnet2ARouteTable": {
+            "Condition": "PrivateSubnetsCondition",
             "Value": {
                 "Ref": "PrivateSubnet2ARouteTable"
             },
