--- a/templates/aws-vpc.template
+++ b/templates/aws-vpc.template
@@ -32,7 +32,9 @@
                         "PrivateSubnet1BCIDR",
                         "PrivateSubnet2BCIDR",
                         "PrivateSubnet3BCIDR",
-                        "PrivateSubnet4BCIDR"
+                        "PrivateSubnet4BCIDR",
+                        "CreateVPCFlowLogs",
+                        "BucketNameVPCFlowLogs"
                     ]
                 },
                 {
@@ -248,10 +250,27 @@
             "Default": "10.0.0.0/16",
             "Description": "CIDR block for the VPC",
             "Type": "String"
+        },
+        "CreateVPCFlowLogs": {
+            "AllowedValues": [
+                "true",
+                "false"
+            ],
+            "Default": "false",
+            "Description": "Set to true to create only create VPC Flow Logs",
+            "Type": "String"
+        },
+        "BucketNameVPCFlowLogs": {
+            "Description": "S3 BucketName where VPC Flow Logs will be put.  Only required if CreateVPCFlowLogs=true",
+            "Type": "String"
+        },
+        "DeliverLogsPermissionArn": {
+            "Description": "The Amazon Resource Name (ARN) of an AWS Identity and Access Management (IAM) role that permits Amazon EC2 to publish flow logs to a CloudWatch Logs log group in your account. Only required if CreateVPCFlowLogs=true",
+            "Type": "String"
         }
     },
     "Mappings": {
-        "AWSAMIRegionMap": {
+        "WSAMIRegionMap": {
             "AMI": {
                 "AWSNATHVM": "amzn-ami-vpc-nat-hvm-2016.09.1.20170119-x86_64-ebs"
             },
@@ -2305,6 +2324,23 @@
                 "VpcId": {
                     "Ref": "VPC"
                 }
+            }
+        },
+        "VPCFlowLog": {
+            "Type": "AWS::EC2::FlowLog",
+            "Properties": {
+                "DeliverLogsPermissionArn": {
+                    "Fn::GetAtt": [
+                        "FlowLogRole",
+                        "Arn"
+                    ]
+                },
+                "LogGroupName": "",
+                "ResourceId": {
+                    "Ref": "VPC"
+                },
+                "ResourceType": "VPC",
+                "TrafficType": "ALL"
             }
         }
     },
